Fix tiny layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -132,6 +132,12 @@ button {
   left: calc(1 / 3 * 0.1 * 100%);
   transform: translateY(-40%);
 }
+.navbar-brand {
+  margin: 0;
+}
+.nav-link {
+  padding: 0;
+}
 .settings {
   position: absolute;
   right: 1.5rem;
@@ -182,11 +188,12 @@ button {
   border-radius: 3rem;
   box-shadow: 0 0 4rem rgba(0, 0, 0, 0.15);
   padding: 6rem;
-  margin-top: 4rem;
+  margin-bottom: 6rem;
 }
 @media (min-width: 992px) {
   .bg-white {
     padding: 4rem;
+    margin-bottom: 0;
   }
 }
 /* vocabulary */
@@ -280,7 +287,7 @@ button {
   animation: fade 4s ease-in-out 1s forwards;
 }
 @media (min-width: 992px) {
-  .row {
+  .loading.row {
     align-items: center;
     position: relative;
     top: -5rem;
